error resolved if no user passed

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,33 @@
     <div class="centered-form">
       <div class="centered-form__box">
         <h1>Join</h1>
+        <h3>Available rooms</h3>
         <form action="chat.html">
           <label>Display Name</label>
-          <input type="text" name="username" placeholder="Display name" autocomplete="off" required>
+          <input
+            type="text"
+            name="username"
+            placeholder="Display name"
+            autocomplete="off"
+            required
+          />
           <label>Room</label>
-          <input type="text" name="room" placeholder="Room" required autocomplete="off">
+          <input
+            type="text"
+            name="room"
+            placeholder="Room"
+            required
+            autocomplete="off"
+          />
           <button>Join</button>
         </form>
-        </form>
+        <!-- <script id="available-rooms" type="text/html">
+              {{#eachkeys data}}
+          <li>{{this.key}} - {{this.value}}</li>
+          {{/eachkeys}}
+        </script>
+
+        <script src="js/chat.js"></script> -->
       </div>
     </div>
   </body>
