--- a/public/index.html
+++ b/public/index.html
@@ -5,38 +5,114 @@
     <title>Chat app</title>
     <link rel="icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      #roomdetail {
+        color: black;
+        cursor: pointer;
+        background-image: linear-gradient(
+          45deg,
+          #ff9a9e 0%,
+          #fad0c4 99%,
+          #fad0c4 100%
+        );
+        padding: 10px;
+        border-radius: 50px;
+        border-radius: 10px;
+        box-shadow: 3px 5px 2px 0px rgba(0, 0, 0, 0.3),
+          -1px -3px 10px 0px rgba(250, 250, 250, 0.3);
+        border-style: none;
+        outline: none;
+        font-size: 24px;
+        font-family: monospace;
+      }
+    </style>
   </head>
   <body>
-    <div class="centered-form">
-      <div class="centered-form__box">
-        <h1>Join</h1>
-        <h3>Available rooms</h3>
-        <form action="chat.html">
-          <label>Display Name</label>
-          <input
-            type="text"
-            name="username"
-            placeholder="Display name"
-            autocomplete="off"
-            required
-          />
-          <label>Room</label>
-          <input
-            type="text"
-            name="room"
-            placeholder="Room"
-            required
-            autocomplete="off"
-          />
-          <button>Join</button>
-        </form>
-        <!-- <script id="available-rooms" type="text/html">
-              {{#eachkeys data}}
-          <li>{{this.key}} - {{this.value}}</li>
-          {{/eachkeys}}
-        </script>
+    <div class="chat">
+      <div
+        class="chat__sidebar"
+        style="
+          background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+        "
+      >
+        <h2 style="color: black; text-align: center; margin-top: 8px;">
+          Available rooms
+        </h2>
+        <br />
 
-        <script src="js/chat.js"></script> -->
+        <div id="rooms"></div>
+      </div>
+      <div class="chat__main">
+        <div class="centered-form" style="width: auto;">
+          <div class="centered-form__box">
+            <h1>Join</h1>
+            <form action="chat.html">
+              <label>Display Name</label>
+              <input
+                type="text"
+                name="username"
+                placeholder="Display name"
+                autocomplete="off"
+                required
+              />
+              <label>Room</label>
+              <input
+                id="room"
+                type="text"
+                name="room"
+                placeholder="Select or Create Room"
+                required
+                autocomplete="off"
+              />
+              <button>Join</button>
+            </form>
+            <script id="available-rooms" type="text/html">
+              <h3 style="color: black;text-align:center">Room,Active User</h3>
+              <ul class="users" >
+              {{#data}}
+              <li id="roomdetail" onClick=updateRoomField(event)>{{.}}</li>
+              {{/data}}
+              <br>
+              <ul>
+            </script>
+
+            <script src="js/index.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+
+            <script>
+              const availableRooms = document.querySelector("#available-rooms")
+                .innerHTML;
+
+              $(document).ready(() => {
+                $.ajax({
+                  url: "/getRoomsDetails",
+                  dataType: "json",
+                  contentType: "application/json",
+                  success: (rooms) => {
+                    console.log(rooms);
+
+                    const html = Mustache.render(availableRooms, {
+                      data: rooms,
+                    });
+                    document
+                      .querySelector("#rooms")
+                      .insertAdjacentHTML("beforeend", html);
+                  },
+                });
+              });
+              function updateRoomField(event) {
+                document.querySelector(
+                  "#room"
+                ).value = event.target.innerHTML.split(",")[0];
+              }
+            </script>
+          </div>
+        </div>
       </div>
     </div>
   </body>
