--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         class="chat__sidebar"
         style="
           background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+          box-shadow: -5px -5px 10px #20222a, 5px 5px 10px #464c5e;
         "
       >
         <h2 style="color: black; text-align: center; margin-top: 8px;">
@@ -49,11 +50,22 @@
       </div>
       <div class="chat__main">
         <div class="centered-form" style="width: auto;">
-          <div class="centered-form__box">
+          <div
+            class="centered-form__box"
+            style="
+              border-radius: 17px;
+              box-shadow: -5px -5px 10px #20222a, 5px 5px 10px #464c5e;
+            "
+          >
             <h1>Join</h1>
             <form action="chat.html">
               <label>Display Name</label>
               <input
+                style="
+                  border-radius: 10px;
+                  box-shadow: 3px 5px 2px 0px rgba(0, 0, 0, 0.3) inset,
+                    -1px -3px 10px 0px rgba(250, 250, 250, 0.3) inset;
+                "
                 type="text"
                 name="username"
                 placeholder="Display name"
@@ -62,6 +74,11 @@
               />
               <label>Room</label>
               <input
+                style="
+                  border-radius: 10px;
+                  box-shadow: 3px 5px 2px 0px rgba(0, 0, 0, 0.3) inset,
+                    -1px -3px 10px 0px rgba(250, 250, 250, 0.3) inset;
+                "
                 id="room"
                 type="text"
                 name="room"
@@ -69,7 +86,16 @@
                 required
                 autocomplete="off"
               />
-              <button>Join</button>
+              <button
+                style="
+                  border-radius: 10px;
+                  box-shadow: 3px 5px 2px 0px rgba(0, 0, 0, 0.3),
+                    -1px -3px 10px 0px rgba(250, 250, 250, 0.3);
+                  border-style: none;
+                "
+              >
+                Join
+              </button>
             </form>
             <script id="available-rooms" type="text/html">
               <h3 style="color: black;text-align:center">Room,Active User</h3>
