--- a/public/chat.html
+++ b/public/chat.html
@@ -87,7 +87,7 @@
                 {{#users}}
                 <li style="background: #333744;
       box-shadow:  -5px -5px 7px #282b35,
-             5px 5px 7px #3e4353;border-radius:5px;padding:7px;">{{username}}</li>
+             5px 5px 7px #3e4353;border-radius:5px;padding:7px;margin:7px;">{{username}}</li>
                 {{/users}}
             </ul>
     </script>
